--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 2 version
+*/
+
 :root {
   --header-background: #101146;
   --header-link: #d78f11;
@@ -6,7 +13,8 @@
   --body-background: #ffffe2;
   --alt-text: rgb(26, 54, 90);
   --container-background: #7777501c;
-  --shadow: #5252372f;
+  --container-shadow: #5252372f;
+  --button-shadow: #1011464d;
   --white: #fff;
   --contact-link: #314ab9;
   --heading-weight: 700;
@@ -62,11 +70,13 @@ button {
   text-decoration: none;
   background-color: var(--header-background);
   color: var(--header-link);
-  padding: 10px;
+  padding: 3px 10px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
+  -webkit-box-shadow: 1px 1px 1px var(--button-shadow);
+  box-shadow: 1px 1px 1px var(--button-shadow);
 }
 .button:hover,
 button:hover,
@@ -182,9 +192,9 @@ nav.page-header__item {
 .container-background {
   background-color: var(--container-background);
 }
-.shadow {
-  -webkit-box-shadow: 3px 3px 2px var(--shadow);
-  box-shadow: 3px 3px 2px var(--shadow);
+.container-shadow {
+  -webkit-box-shadow: 3px 3px 2px var(--container-shadow);
+  box-shadow: 3px 3px 2px var(--container-shadow);
 }
 
 /* index.html page. profile image and info */
@@ -248,6 +258,9 @@ nav.page-header__item {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+.project-details-link {
+  display: none;
 }
 
 /* movie-craze.html styling */
@@ -335,11 +348,17 @@ nav.page-header__item {
     text-align: center;
     width: 90%;
   }
+  .project-details-link {
+    display: block;
+  }
   .project-image-container {
     width: 100%;
   }
   .project-image {
     border-radius: 5px 5px 0 0;
+  }
+  .project-modal:hover {
+    display: none;
   }
 
   h1 {
